--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,9 +8,13 @@ header, #principal, #second, #contato, #stream {
 	
 }
 
+
 .link-menu {
   color: #fff;
   background-color: #555;
+  text-decoration:none;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 .f {
@@ -28,10 +32,16 @@ header, #principal, #second, #contato, #stream {
 main {
   background-color: #333;
   color: #ddd;
+  display: flex;
+  justify-content: center;
 }
 
 h1, h2 {
   font-family: 'Amatic SC';
+  font-size:xxx-large;
+  text-align: -webkit-center;
+  display: flex;
+  align-self: flex-end;
 }
 
 #second a{
@@ -43,3 +53,70 @@ footer {
   color: #ddd;
 }
 
+header{
+  display: flex;
+  justify-content: center;
+}
+
+img#logo{
+  width: 100px;
+}
+div#logo{
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
+nav{
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+#menu{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+}
+.item-menu{
+  list-style-type: none;
+}
+figure img{
+  width: 300px;
+}
+figure{
+  display: flex;
+  flex: 1;
+  justify-content: right;
+}
+#principal{
+  width: 1050px;
+}
+#principal, #sec_ctd{
+  display: flex;
+  justify-self: center;
+  align-items: center;
+}
+#sec_ctd{
+  flex-direction: column;
+  padding-right: 50px;
+  justify-content: left;
+  display: flex;
+  flex: 1;
+}
+#sec_ctd p{
+  width: 400px;
+  text-align: justify;
+  display: flex;
+  align-self: flex-start;
+}
+#second{
+  margin: 100px auto;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  align-items: center;
+}
+.capa{
+  width: 200px;
+}
